# sdl2-game-template

./: .gitignore  CMakeLists.txt  LICENSE
include/: Debug.hpp  DeltaTime.hpp  Game.hpp  Main.h  Timer.hpp  Window.hpp  entt
src/: Game.cpp  Main.cpp  Window.cpp
